# Python-Virtual-Pet-Game

./: README.md  pyproject.toml
data/: pet.json  pets.json  tank.json
python_virtual_pet/: main.py  pet.py  tank.py  utilities.py
tests/: test_python_virtual_pet.py  test_tank.py  test_utilities.py
