[tool.poetry]
name = "python-virtual-pet"
version = "0.1.0"
description = ""
authors = ["Ellianna3 <bauee527@hsd.k12.o>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
